--- a/Frontend/src/Components/styleGame.css
+++ b/Frontend/src/Components/styleGame.css
@@ -14,7 +14,7 @@
     margin-top: 2%;
     margin-bottom: 4%;
     border: 3px solid black;
-    max-width: 90%;
+    max-width: 70%;                                /**/
     height: auto;
 }
 
@@ -26,11 +26,11 @@ h1 {
 
 .game p {
     margin: 0%;
-    font-size: 1.5rem;
+    font-size: 3rem;
 }
 .questionImg {
     margin: 1rem 0;
-    max-width: 90%;
+    max-width: 70%;                                     /**/
     height: auto;
     object-fit: cover;
 }
@@ -39,14 +39,14 @@ h1 {
     flex-wrap: wrap;
     justify-content: center;
     /*align-items: center;*/
-    gap: 1.5rem;
+    gap: 7rem;
     /* margin-bottom: 0px; Reduce the bottom margin */
 }
 
 .choice {
-    padding: 0.5rem 1rem;
-    font-size: 1.5rem;
-    border-radius: 2rem;
+    padding: 0.5rem 4rem;
+    font-size: 3rem;
+    border-radius: 3rem;
     border: 0.1rem solid #333;
     background-color: rgb(255, 255, 255);
     min-width: 100px;
@@ -63,7 +63,7 @@ h1 {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: 2rem;
 }
 
 .imgchoice {
@@ -73,8 +73,7 @@ h1 {
     background-color: transparent;
     transition: transform 0.2s ease, border-color 0.2s ease;
     display: inline-block;
-    width: 150px;  /* Adjust width */
-    height: auto; /* Adjust height */
+    
 }
 
 .imgchoice img {
@@ -90,15 +89,15 @@ h1 {
 }
 
 .submit {
-    font-size: 1.2rem;
+    font-size: 2.1rem;
     border-radius: 25px;
     border: 3px solid black;
     background-color: white;
     cursor: pointer;
-    padding: 0.5rem 1.5rem;
-    margin-top: 1rem;
-    margin-left: auto; /* Pushes the button to the right */
-    display: block; /* Ensures proper layout alignment */
+    padding: 0.7rem 3rem;
+    margin-top: 0.2rem;
+    margin-right: 3%;
+    float: right;
     transition: background-color 0.2s ease, transform 0.2s ease;
 }
 
