--- a/MergedFrontend/final/src/Drop.css
+++ b/MergedFrontend/final/src/Drop.css
@@ -4,6 +4,9 @@
     font-size:25px;
     align-items:center;
     cursor:pointer;
+    border-radius:10px;
+    background-color: #2C74B3;
+    color:white;
 }
 .dropDownToggle{
     flex-basis:fit-content;
@@ -12,6 +15,8 @@
     width:80vw;
     border-radius:10px;
     border:1px solid black;
+    box-shadow: 0px 1px 10px rgb(83, 82, 82);
+    
 
 }
 .dropContent{
