--- a/MergedFrontend/final/src/Instances.css
+++ b/MergedFrontend/final/src/Instances.css
@@ -8,12 +8,12 @@
 .gameScreenshot{
     flex-basis:30vh;
     width:25vw;
-    border:2px solid #f1f1f1;
+    border:2px solid black;
 }
 .playerImage{
     flex-basis:30vh;
     width:25vw;
-    border:2px solid #f1f1f1;
+    border:2px solid black;
 }
 .Flex3{
     padding-left:30px;
