--- a/MergedFrontend/final/src/styleGame.css
+++ b/MergedFrontend/final/src/styleGame.css
@@ -1,4 +1,9 @@
 /* Question Pages */
+body{
+    background-image: url('./Assets/gamebackground.png');
+    background-size: cover;
+}
+
 .game {
     text-align: center;
     flex-direction: column;
