--- a/MergedFrontend/final/src/styleGame.css
+++ b/MergedFrontend/final/src/styleGame.css
@@ -1,6 +1,6 @@
 /* Question Pages */
 body{
-    background-image: url('./Assets/gamebackground.png');
+    /* background-image: url('./Assets/gamebackground.png'); */
     background-size: cover;
 }
 
