--- a/MergedFrontend/final/src/Drop.css
+++ b/MergedFrontend/final/src/Drop.css
@@ -11,7 +11,9 @@
     flex-direction:column;
     width:80vw;
     border-radius:10px;
-    border:1px solid black;
+    border:1px solid rgb(200, 230, 247);
+    box-shadow: 0px 6px 20px rgba(173, 216, 230, 0.3);
+    
 
 }
 .dropContent{
