complete css changed

--- a/MergedFrontend/final/src/Analysis.css
+++ b/MergedFrontend/final/src/Analysis.css
@@ -20,7 +20,8 @@
 
 .rightContainer {
     margin-right: 15px;
-    margin-bottom: 15px;
+    margin-bottom: 26.5px;
+    margin-top: 10px;
 }
 
 /* Head and Overall Titles */
