--- a/MergedFrontend/final/src/List.css
+++ b/MergedFrontend/final/src/List.css
@@ -6,7 +6,9 @@
     justify-content:space-around;
     border-radius:10px;
     align-items:center;
-
+    color : black;
+    background-color: azure;
+    font-size:1.5rem;
 }
 .listInstance:hover{
     border:2px solid black;
