--- a/MergedFrontend/final/src/Home.css
+++ b/MergedFrontend/final/src/Home.css
@@ -6,7 +6,6 @@
   }
 body {
     font-family: "Roboto", sans-serif;
-    background-color: #0a192f;
     color: #e5e5e5;
     overflow-x: hidden;
     line-height: 1.6;
@@ -15,7 +14,7 @@ body {
     display:flex;
     flex-direction:column;
     gap: 1.5vh;
-    background-color: #112240;
+    background-color: #112240 ;
     border-radius: 12px;
     padding: 20px;
     box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.4);
@@ -64,11 +63,11 @@ body {
     cursor: pointer;
     transition: all 0.2s ease;
 }
-.tag:hover {
+/* .tag:hover {
     background: #355c7d;
     transform: translateY(-2px);
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-}
+} */
 .Bar{
     width:65vw;
     /* flex-grow: 2; */
