Seperating components and their respective css files into 2 seperate folders(Components & CSS)

--- a/MergedFrontend/final/src/CSS/Play.css
+++ b/MergedFrontend/final/src/CSS/Play.css
@@ -18,7 +18,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;  /* Full height to ensure vertical centering */
-    background-image: url('./Assets/PlayBackground2.png');
+    background-image: url('../Assets/PlayBackground2.png');
     background-size: cover;
     background-position: center;
     flex-direction: column;
