--- a/MergedFrontend/final/src/CSS/Game.css
+++ b/MergedFrontend/final/src/CSS/Game.css
@@ -1,6 +1,6 @@
 /* Question Pages */
 body{
-  background-image: url('./Assets/backgroundImage.png') !important;
+  background-image: url('../Assets/backgroundImage.png') !important;
   height:100vh;
   width:100vw;
   background-repeat: no-repeat;
