--- a/MergedFrontend/final/src/CSS/Login_Game.css
+++ b/MergedFrontend/final/src/CSS/Login_Game.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-image: url('./Assets/Final_F.jpg');
+  background-image: url('../Assets/Final_F.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
