--- a/MergedFrontend/final/src/CSS/Home.css
+++ b/MergedFrontend/final/src/CSS/Home.css
@@ -20,7 +20,8 @@ body {
     box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.4);
     width: 90%;
     max-width: 100%;
-    margin: 20px auto;
+    height:95vh;
+    margin: 2.5vh auto;
     font-family: "Roboto", sans-serif;
     font-weight: 400 ;
     font-style: normal ;
@@ -50,6 +51,7 @@ body {
     margin-top: 10px;
     border-radius: 5px;
     background-color: #112240;
+    z-index:1000;
 }
 .tag{
     flex:0.8;
